Fixed word-wrapping overflow on long sing-word titles in Developer Materials

--- a/stylesheets/_developer-materials.scss
+++ b/stylesheets/_developer-materials.scss
@@ -19,6 +19,7 @@ ul.results {
 }
 .material {
   position: relative;
+  word-wrap: break-word;
   &:before {display: none;} // take off the ul bullet
   p {
     word-wrap: break-word;
